doing some request to the pipelines
Actions done:
- Pull data
- Update data
- Pull nested data

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,8 @@
+# Files that shouldn't be in github
+pipefy_api_key.txt
+organization_id.txt
+prettyfy.txt
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
